apply patch from Luca Boccassi (http://lists.alioth.debian.org/pipermail/pkg-nvidia-devel/2015-April/011155.html)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5326 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -202,6 +202,8 @@ build-kernel-source-tree: install-into-tmp
 		ln -sf ../Makefile $(module_source)/uvm
 	test ! -d $(module_source)/uvm || \
 		ln -sf ../conftest.sh $(module_source)/uvm
+	test ! -d $(module_source)/uvm || \
+		ln -sf ../conftest.h $(module_source)/uvm
 
 	# We may need nv-kernel.o for several architectures to accomodate
 	# all kernel flavors. Use Kbuild-compatible names.
