actually get i386 dkms build to work (nvidia-kernel-dkms:i386 was still missing $(module_source)/uvm), Konstantin Demin's patch fixes that); still versioned as 346.72-1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5343 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -196,6 +196,9 @@ build-kernel-source-tree: install-into-tmp
 	mv $(module_source)/conftest.sh $(module_source)/conftest_nvidia.sh
 
 	# For the nvidia-uvm module.
+	test -d $(module_source)/uvm || cp -r NVIDIA-Linux-amd64/kernel/uvm $(module_source)/
+	test -d $(module_source)/uvm || cp -r NVIDIA-Linux-i386/kernel/uvm $(module_source)/
+	test -d $(module_source)/uvm || cp -r NVIDIA-Linux-armhf/kernel/uvm $(module_source)/
 	test ! -f $(module_source)/uvm/Makefile || \
 		mv $(module_source)/uvm/Makefile $(module_source)/uvm/Kbuild
 	test ! -d $(module_source)/uvm || \
