--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -2,6 +2,7 @@
 [i386]: binary-file-built-without-LFS-support
 binary-has-unneeded-section
 shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 hardening-no-fortify-functions
 hardening-no-relro
