Update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5369 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler.symbols.in
+++ b/debian/libnvidia-compiler.symbols.in
@@ -7,4 +7,5 @@ libnvidia-compiler.so.#VERSION# #PACKAGE# #MINVER#
  NvCliFreeBuffer@Base 346
  NvCliGetBufferData@Base 346
  NvCliLinkBitcode@Base 346
+ NvCliQueryBinaryType@Base 349.16
  nvvmCompilerProperty@Base 280
