Fix dkms module build failure on i386 and armhf
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5375 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -39,6 +39,9 @@ configure-stamp:
 	fi
 	sh debian/prep-modules $(KSRC)
 	sed 's/#KVERS#/$(KVERS)/g' debian/install.template > debian/install
+ifneq (1,$(WITH_UVM))
+	sed -i -e '/nvidia-uvm.ko/d' debian/install
+endif
 	touch $@
 
 build: build-arch build-indep
