--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -2,4 +2,5 @@ not-silent.patch
 avoid-ld.gold.patch
 use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
+#HAS_UVM#uvm-symvers2.patch
 #HAS_UVM#uvm-symvers.patch
