--- a/debian/control
+++ b/debian/control
@@ -62,6 +62,8 @@ Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  See /usr/share/doc/${nvidia}-driver/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
 #Package: ${nvidia}-driver-bin
 Package: nvidia-driver-bin
@@ -322,6 +324,8 @@ Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  .
  See /usr/share/doc/${nvidia}-kernel-dkms/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
 #Package: ${nvidia}-kernel-source
 Package: nvidia-kernel-source
@@ -359,6 +363,8 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  .
  See /usr/share/doc/${nvidia}-kernel-source/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
 #Package: ${nvidia}-vdpau-driver
 Package: nvidia-vdpau-driver
