UVM architectures can be configured via d/rules.defs (from branches/352 r5405)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5428 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -20,12 +20,14 @@ NVIDIA_SETTINGS		?= nvidia-settings$(legacy)
 NVIDIA_ALTERNATIVE	?= nvidia$(legacy)-alternative
 ARCH_LIST		?= i386 amd64
 ARCH_DEPS_i386		?=
+UVM_ARCH_LIST		?= $(ARCH_LIST)
 version			 = $(NVIDIA_RELEASE)
 version_major		 = $(firstword $(subst ., ,$(version)))
 nvidia			 = nvidia$(legacy)
 libcuda1		 = lib$(if $(legacy),$(nvidia)-)cuda1
 module			 = nvidia-$(current)
 current			 = $(if $(legacy),$(patsubst -%,%,$(legacy)),current)
+has_uvm			 = $(filter $(DEB_HOST_ARCH),$(UVM_ARCH_LIST))
 legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
 legacy_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
 perfkit			 =
@@ -196,13 +198,13 @@ build-kernel-source-tree: install-into-tmp
 		mv $(module_source)/Makefile $(module_source)/Kbuild
 	mv $(module_source)/conftest.sh $(module_source)/conftest_nvidia.sh
 
+ifneq (,$(has_uvm))
 	# For the nvidia-uvm module.
-	test ! -f $(module_source)/uvm/Makefile || \
-		mv $(module_source)/uvm/Makefile $(module_source)/uvm/Kbuild
-	test ! -d $(module_source)/uvm || \
-		ln -sf ../Makefile $(module_source)/uvm
-	test ! -d $(module_source)/uvm || \
-		ln -sf ../conftest.sh $(module_source)/uvm
+	mv $(module_source)/uvm/Makefile $(module_source)/uvm/Kbuild
+	ln -sf ../Makefile $(module_source)/uvm
+	ln -sf ../conftest.sh $(module_source)/uvm
+	ln -sf ../conftest.h $(module_source)/uvm
+endif
 
 	# We may need nv-kernel.o for several architectures to accomodate
 	# all kernel flavors. Use Kbuild-compatible names.
@@ -313,6 +315,7 @@ override_dh_strip:
 	-e 's{#WATCH_PATTERN#}{$(subst \,\\,$(watch_pattern))}g;' \
 	-e 's{#LIBDIR#}{$(libdir)}g;' \
 	-e 's{#PRIVATE#}{$(nvidia_private)}g;' \
+	-e 's{#HAS_UVM#}{$(if $(has_uvm),,#)}g;' \
 	-e 's{#!armhf#}{$(if $(filter armhf,$(DEB_HOST_ARCH)),#)}g;' \
 	-e 's{#!legacy#}{$(if $(legacy),#)}g;' \
 	< $< > $@
