--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -27,10 +27,6 @@ export KSRC
 export KVERS
 export KPKG_DEST_DIR
 
-ifneq (,$(wildcard uvm))
-    WITH_UVM	 = 1
-endif
-
 configure: configure-stamp
 configure-stamp:
 	@if [ x"$(KVERS)" = x ] ; then \
@@ -48,9 +44,7 @@ build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
 	$(MAKE) SYSSRC=$(KSRC)
-ifeq (1,$(WITH_UVM))
-	$(MAKE) -C uvm SYSSRC=$(KSRC)
-endif
+#HAS_UVM#	$(MAKE) -C uvm SYSSRC=$(KSRC)
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 	touch $@
 
@@ -83,9 +77,7 @@ clean:
 	dh_testdir
 	dh_testroot
 	$(MAKE) SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
-ifeq (1,$(WITH_UVM))
-	$(MAKE) -C uvm SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
-endif
+#HAS_UVM#	$(MAKE) -C uvm SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
 	dh_clean debian/control debian/install
 
