--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -2,5 +2,5 @@ not-silent.patch
 avoid-ld.gold.patch
 use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
-uvm-symvers.patch
+#HAS_UVM#uvm-symvers.patch
 fixes-for-kernel-4.0.0.patch
