--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,3 +4,4 @@ use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
 #HAS_UVM#uvm-symvers2.patch
 #HAS_UVM#uvm-symvers.patch
+include-swiotlb-header-on-arm.patch
