--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -15,6 +15,7 @@ CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
 
 #HAS_UVM#BUILT_MODULE_NAME[1]="nvidia-uvm"
 #HAS_UVM#BUILT_MODULE_LOCATION[1]="uvm/"
+#HAS_UVM#DEST_MODULE_NAME[1]="$PACKAGE_NAME-uvm"
 #HAS_UVM#DEST_MODULE_LOCATION[1]="/updates/dkms"
 #HAS_UVM#MAKE[0]+="; env CCACHE_DISABLE=1 \
 #HAS_UVM#    make -C uvm SYSSRC=${kernel_source_dir}"
