Add patch to ignore CONFIG_XEN on arm, fixes DKMS build failure
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5439 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -5,3 +5,4 @@ conditionally-include-linux_version.h.patch
 #HAS_UVM#uvm-symvers2.patch
 #HAS_UVM#uvm-symvers.patch
 include-swiotlb-header-on-arm.patch
+ignore_xen_on_arm.patch
