--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -2,6 +2,7 @@
 [!amd64]: binary-file-built-without-LFS-support
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: zlib
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: libpng
+spelling-error-in-binary
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
