--- a/debian/libgles2-nvidia.lintian-overrides.in
+++ b/debian/libgles2-nvidia.lintian-overrides.in
@@ -1,7 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-[i386]: shlib-with-non-pic-code
-spelling-error-in-binary
+[!i386]: spelling-error-in-binary
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
