--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -1,4 +1,4 @@
 alias nvidia #MODULE#
 #HAS_UVM#alias nvidia-uvm #MODULE#-uvm
-remove #MODULE# rmmod nvidia-uvm nvidia
+remove #MODULE# rmmod #RMMOD_MODULES#
 #HAS_UVM#remove #MODULE#-uvm rmmod nvidia-uvm
