fold .install.armhf into .install.in
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5471 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -2,4 +2,4 @@ libGL.so.#VERSION#		#LIBDIR#/#PRIVATE#/
 libnvidia-glcore.so.#VERSION#	#LIBDIR#/
 libnvidia-cfg.so.#VERSION#	#LIBDIR#/#PRIVATE#/
 libnvidia-tls.so.#VERSION#	#LIBDIR#/
-tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
+#!armhf#tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
