rework nvidia-modprobe.conf to not use aliases
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5507 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -1,4 +1,5 @@
-alias nvidia #MODULE#
-#HAS_UVM#alias nvidia-uvm #MODULE#-uvm
-remove #MODULE# rmmod #RMMOD_MODULES#
-#HAS_UVM#remove #MODULE#-uvm rmmod nvidia-uvm
+install nvidia modprobe -i #MODULE# $CMDLINE_OPTS
+
+#HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
+
+#HAS_UVM#remove nvidia modprobe -r -i nvidia-uvm nvidia
