finalize changelog for nvidia-graphics-drivers (340.93-2)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5534 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver.README.Debian.in
+++ b/debian/nvidia-driver.README.Debian.in
@@ -16,11 +16,11 @@ NOTES ABOUT GLX DRIVER AND OPENGL:
 -----------------------------------------------------------------------
 
 The NVIDIA driver packages now configure the system s.t. Xorg automatically
-detects and uses the NVIDIA driver. Therefore it is no longer neccessary to
+detects and uses the NVIDIA driver. Therefore it is no longer necessary to
 manually create an xorg.conf.
 
-If you still want to manually create an xorg.conf, the following minimal
-one can serve as a starting point:
+If you still want to manually create an xorg.conf, e.g. to change some other
+driver settings, the following minimal one can serve as a starting point:
 
 	Section "Device"
 	    Identifier     "My GPU"
