--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,8 +1,6 @@
-not-silent.patch
 avoid-ld.gold.patch
-use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
-#HAS_UVM#uvm-symvers2.patch
-#HAS_UVM#uvm-symvers.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
+disable_nvidia_conftest.patch
+#HAS_UVM#disable_uvm_conftest.patch
