--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -4,6 +4,8 @@
 # See Bug#582748.
 export CCACHE_DISABLE := 1
 
+export NV_VERBOSE := 1
+
 CFLAGS = -Wall -g
 ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
     CFLAGS += -O0
@@ -43,8 +45,7 @@ build-indep:
 build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
-	$(MAKE) SYSSRC=$(KSRC)
-#HAS_UVM#	$(MAKE) -C uvm SYSSRC=$(KSRC)
+	$(MAKE) SYSSRC=$(KSRC) modules
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 	touch $@
 
@@ -77,7 +78,6 @@ clean:
 	dh_testdir
 	dh_testroot
 	$(MAKE) SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
-#HAS_UVM#	$(MAKE) -C uvm SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
 	dh_clean debian/control debian/install
 
