--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -9,13 +9,10 @@ DEST_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL=yes
 
-MAKE[0]="env CCACHE_DISABLE=1 \
-    make -C . SYSSRC=${kernel_source_dir}"
+MAKE[0]="env CCACHE_DISABLE=1 NV_VERBOSE=1 \
+    make -C . SYSSRC=${kernel_source_dir} modules"
 CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
 
 #HAS_UVM#BUILT_MODULE_NAME[1]="nvidia-uvm"
-#HAS_UVM#BUILT_MODULE_LOCATION[1]="uvm/"
+#HAS_UVM#DEST_MODULE_NAME[1]="nvidia-uvm"
 #HAS_UVM#DEST_MODULE_LOCATION[1]="/updates/dkms"
-#HAS_UVM#MAKE[0]+="; env CCACHE_DISABLE=1 \
-#HAS_UVM#    make -C uvm SYSSRC=${kernel_source_dir}"
-#HAS_UVM#CLEAN+="; make -C uvm SYSSRC=${kernel_source_dir} clean"
