--- a/debian/rules
+++ b/debian/rules
@@ -189,31 +189,16 @@ build-kernel-source-tree: install-into-tmp
 	# binary packages.
 	cp -a debian/tmp/NVIDIA_Changelog $(module_source)/
 
-	# We only want Kbuild.
-	rm -f $(module_source)/makefile
-	rm -f $(module_source)/Makefile.nvidia
-	test ! -f $(module_source)/Makefile.kbuild || \
-		mv $(module_source)/Makefile.kbuild $(module_source)/Kbuild
-	test ! -f $(module_source)/Makefile || \
-		mv $(module_source)/Makefile $(module_source)/Kbuild
-	mv $(module_source)/conftest.sh $(module_source)/conftest_nvidia.sh
-
-ifneq (,$(has_uvm))
-	# For the nvidia-uvm module.
-	mv $(module_source)/uvm/Makefile $(module_source)/uvm/Kbuild
-	ln -sf ../Makefile $(module_source)/uvm
-	ln -sf ../conftest.sh $(module_source)/uvm
-	ln -sf ../conftest.h $(module_source)/uvm
-endif
-
 	# We may need nv-kernel.o for several architectures to accomodate
 	# all kernel flavors. Use Kbuild-compatible names.
 	rm -f $(module_source)/nv-kernel.o
-	$(foreach a,$(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)),cp -a NVIDIA-Linux-$a/kernel/nv-kernel.o $(module_source)/nv-kernel-$a.o_shipped ;)
+	$(foreach a,$(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)),cp -a NVIDIA-Linux-$a/kernel/nvidia/nv-kernel.o_binary $(module_source)/nv-kernel-$a.o_shipped ;)
 
 	# Install a debian/ tree and new conftest files that work purely
 	# with kbuild and don't require root into the module package.
-	cp -a debian/module/* $(module_source)/
+	cp -a debian/module/debian $(module_source)/
+	cp -a debian/module/conftest $(module_source)/common/inc/
+	cp -a debian/module/conftest.h $(module_source)/common/inc/
 	cp -a debian/copyright $(module_source)/debian/
 	cp -a debian/bug-script $(module_source)/debian/
 	cp -a debian/bug-control $(module_source)/debian/
@@ -223,7 +208,6 @@ endif
 	chmod -R a-sx,u=rwX,go=rX $(module_source)/../..
 	chmod a+x $(module_source)/debian/rules
 	chmod a+x $(module_source)/conftest.sh
-	chmod a+x $(module_source)/conftest_nvidia.sh
 	find '$(module_source)/../../modules' -depth -newermt '$(BUILD_DATE)' -print0 | \
 		xargs -0r touch --no-dereference --date='$(BUILD_DATE)'
 
@@ -260,7 +244,7 @@ override_dh_installchangelogs:
 	dh_installchangelogs debian/tmp/NVIDIA_Changelog
 
 override_dh_dkms:
-ifeq (,$(wildcard NVIDIA-Linux/kernel/uvm))
+ifeq (,$(wildcard NVIDIA-Linux/kernel/nvidia-uvm))
 	sed -i -e '/BUILT_MODULE_NAME\[1\]="nvidia-uvm"/,$$d' debian/$(nvidia)-kernel-dkms.dkms
 endif
 	dh_dkms -V $(version)
