Add new libglvnd-nvidia package with vendor-neutral GLdispatch library
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5582 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -189,6 +189,24 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
+#Package: libglvnd-${nvidia}
+Package: libglvnd-nvidia
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${nvidia-alternative},
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA binary GL vendor neutral libraries${nvidia:LegacyDesc}
+ This package contains the vendor neutral graphics libraries.
+ These libraries are currently used to provide full OpenGL dispatching support
+ to NVIDIA's implementation of EGL.
+ .
+ See the description of the ${nvidia}-driver package
+ or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
+ for a complete list of supported GPUs and PCI IDs.
+
 #Package: libgles1-${nvidia}
 Package: libgles1-nvidia
 Architecture: i386 amd64 armhf
