Upstream now ships a full libEGL.so.1 implementation, update the package and add dependency to libglvnd-nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5583 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -179,6 +179,7 @@ Pre-Depends:
 Depends:
  ${nvidia-alternative},
  lib${nvidia}-eglcore (= ${binary:Version}),
+ libglvnd-${nvidia} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  This package contains the EGL native platform graphics interface library.
