Add new symbol to libgl1-nvidia-glx and libnvidia-eglcore
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5584 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -1675,6 +1675,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glQueryCounter@Base 256
  glQueryCounterEXT@Base 346
  glQueryCounterNV@Base 331
+ glQueryResourceNVX@Base 355
  glRasterPos2d@Base 1.0.4349
  glRasterPos2dv@Base 1.0.4349
  glRasterPos2f@Base 1.0.4349
