Add patch to fix kernel 4.3 build failure due to internal api changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5605 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,3 +4,4 @@ include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
+seq-printf.patch
