ship nvidia-drm-outputclass.conf
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5609 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/xserver-xorg-video-nvidia.install.in
+++ b/debian/xserver-xorg-video-nvidia.install.in
@@ -1,3 +1,4 @@
 nvidia_drv.so		usr/lib/#PRIVATE#/
 libglx.so.#VERSION#	usr/lib/#PRIVATE#/
 nvidia.ids		usr/lib/#PRIVATE#/
+debian/nvidia-drm-outputclass.conf	etc/#PRIVATE#/
